k3s/monitoring_stack/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: monitoring-vs
  namespace: monitoring
spec:
  hosts:
  - "*"
  gateways:
  - monitoring-gateway
  http:
  - match:
    - uri:
        prefix: "/prometheus"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
